--- a/index.html
+++ b/index.html
@@ -124,76 +124,81 @@
                 <div class="over"></div>
             </span>
         </div>
-
-        <section class="padding-sc">
-            <div class="container">
-                <h2 class="h-title">Our showroom</h2>
-                <div class="grid">
-                    <div class="card" onclick="openImgFullScreen()">
-                        <img src="img/img (1).jpg" alt="It is alt for img and Description">
-                        <div class="overlay">
-                            <i class="fa-solid fa-arrow-up-right-from-square"></i>
-                        </div>
-                    </div>
-                    <div class="card" onclick="openImgFullScreen()">
-                        <img src="img/img (2).jpg" alt="It is alt for img and Description">
-                        <div class="overlay">
-                            <i class="fa-solid fa-arrow-up-right-from-square"></i>
-                        </div>
-                    </div>
-                    <div class="card" onclick="openImgFullScreen()">
-                        <img src="img/img (3).jpg" alt="It is alt for img and Description">
-                        <div class="overlay">
-                            <i class="fa-solid fa-arrow-up-right-from-square"></i>
-                        </div>
-                    </div>
-                    <div class="card" onclick="openImgFullScreen()">
-                        <img src="img/img (4).jpg" alt="It is alt for img and Description">
-                        <div class="overlay">
-                            <i class="fa-solid fa-arrow-up-right-from-square"></i>
-                        </div>
-                    </div>
-                    <div class="card" onclick="openImgFullScreen()">
-                        <img src="img/img (5).jpg" alt="It is alt for img and Description">
-                        <div class="overlay">
-                            <i class="fa-solid fa-arrow-up-right-from-square"></i>
-                        </div>
-                    </div>
-                    <div class="card" onclick="openImgFullScreen()">
-                        <img src="img/img (6).jpg" alt="It is alt for img and Description">
-                        <div class="overlay">
-                            <i class="fa-solid fa-arrow-up-right-from-square"></i>
-                        </div>
-                    </div>
-                    <div class="card" onclick="openImgFullScreen()">
-                        <img src="img/img (7).jpg" alt="It is alt for img and Description">
-                        <div class="overlay">
-                            <i class="fa-solid fa-arrow-up-right-from-square"></i>
-                        </div>
-                    </div>
-                    <div class="card" onclick="openImgFullScreen()">
-                        <img src="img/img (8).jpg" alt="It is alt for img and Description">
-                        <div class="overlay">
-                            <i class="fa-solid fa-arrow-up-right-from-square"></i>
-                        </div>
-                    </div>
-                    <div class="card" onclick="openImgFullScreen()">
-                        <img src="img/img (9).jpg" alt="It is alt for img and Description">
-                        <div class="overlay">
-                            <i class="fa-solid fa-arrow-up-right-from-square"></i>
-                        </div>
-                    </div>
-                    <div class="card" onclick="openImgFullScreen()">
-                        <img src="img/img (10).jpg" alt="It is alt for img and Description">
-                        <div class="overlay">
-                            <i class="fa-solid fa-arrow-up-right-from-square"></i>
-                        </div>
-                    </div>
-                    
-                </div>
-            </div>
-        </section>
     </div>
+
+    <section class="padding-sc">
+        <div class="container">
+            <h2 class="h-title">Our showroom</h2>
+            <div class="grid">
+                <div class="card" onclick="openImgFullScreen()">
+                    <img src="img/img (1).jpg" alt="It is alt for img and Description">
+                    <div class="overlay">
+                        <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                    </div>
+                </div>
+                <div class="card" onclick="openImgFullScreen()">
+                    <img src="img/img (2).jpg" alt="It is alt for img and Description">
+                    <div class="overlay">
+                        <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                    </div>
+                </div>
+                <div class="card" onclick="openImgFullScreen()">
+                    <img src="img/img (3).jpg" alt="It is alt for img and Description">
+                    <div class="overlay">
+                        <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                    </div>
+                </div>
+                <div class="card" onclick="openImgFullScreen()">
+                    <img src="img/img (4).jpg" alt="It is alt for img and Description">
+                    <div class="overlay">
+                        <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                    </div>
+                </div>
+                <div class="card" onclick="openImgFullScreen()">
+                    <img src="img/img (5).jpg" alt="It is alt for img and Description">
+                    <div class="overlay">
+                        <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                    </div>
+                </div>
+                <div class="card" onclick="openImgFullScreen()">
+                    <img src="img/img (6).jpg" alt="It is alt for img and Description">
+                    <div class="overlay">
+                        <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                    </div>
+                </div>
+                <div class="card" onclick="openImgFullScreen()">
+                    <img src="img/img (7).jpg" alt="It is alt for img and Description">
+                    <div class="overlay">
+                        <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                    </div>
+                </div>
+                <div class="card" onclick="openImgFullScreen()">
+                    <img src="img/img (8).jpg" alt="It is alt for img and Description">
+                    <div class="overlay">
+                        <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                    </div>
+                </div>
+                <div class="card" onclick="openImgFullScreen()">
+                    <img src="img/img (9).jpg" alt="It is alt for img and Description">
+                    <div class="overlay">
+                        <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                    </div>
+                </div>
+                <div class="card" onclick="openImgFullScreen()">
+                    <img src="img/img (10).jpg" alt="It is alt for img and Description">
+                    <div class="overlay">
+                        <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+    <footer class="footer">
+        <div class="container">
+            <p>&copy; 2024 Medo Gamal. All rights reserved.</p>
+        </div>
+    </footer>
 
 </body>
 
@@ -228,7 +233,7 @@
     var captionText = document.getElementById("caption");
     var modal = document.getElementById("myModal");
     function openImgFullScreen() {
-        var currentImg= document.querySelectorAll(".card img")
+        var currentImg = document.querySelectorAll(".card img")
         modal.style.display = "block";
         console.log(this)
         modalImg.src = currentImg[0].src;
